Bug #18864  TRUNCATE TABLE doesn't reset AUTO_INCREMENT value on ndb table