sql/ha_ndbcluster.cc
@@ -70,7 +70,7 @@ handlerton ndbcluster_hton = {
   NULL, /* create_cursor_read_view */
   NULL, /* set_cursor_read_view */
   NULL, /* close_cursor_read_view */
-  HTON_NO_FLAGS
+  HTON_CAN_RECREATE
 };
 
 #define NDB_AUTO_INCREMENT_RETRIES 10
